--- a/views/user.pug
+++ b/views/user.pug
@@ -1,6 +1,6 @@
 head
     title #{name} profile
     meta(name="description" content= `${name}: ${bio}`)
-    meta(property="og:images" content=`/users/thumbnail/${id}.png`)
+    meta(property="og:image" content=`/users/thumbnail/${id}.png`)
 body
     div Page content....
